# farc

./: Cargo.toml
.github/workflows/: CI.yml
examples/: farc_pack.rs
src/: lib.rs
