[package]
name = "farc"
version = "0.1.0"
edition = "2021"

[lib]
name = "farc"
crate-type = ["cdylib", "lib"]

[dependencies]
binary_parser = { git = "https://github.com/vixen256/binary_parser" }
libflate = "2.0"
thiserror = "1.0"
pyo3 = { version = "0.21", features = [
    "extension-module",
    "abi3-py37",
], optional = true }

[features]
default = ["python"]
python = ["dep:pyo3"]
